[package]
name = "leon"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parze = { git = "https://github.com/zesterer/parze-new.git" }
internment = "0.3"
lazy_static = "1.4"
